src/snapshots/starship_jj__config__tests__parse_provided_config.snap
---
source: src/config.rs
expression: c
---
Config {
    global: GlobalConfig {
        module_separator: " ",
        timeout: None,
        bookmarks: BookmarkConfig {
            search_depth: 100,
            exclude: [],
        },
        reset_color: true,
    },
    modules: [
        Bookmarks(
            Bookmarks {
                separator: " ",
                style: Style {
                    color: Some(
                        Magenta,
                    ),
                    bg_color: None,
                    attributes: TextAttributess {
                        bold: None,
                        dimmed: None,
                        italic: None,
                        underline: None,
                        blink: None,
                        reverse: None,
                        hidden: None,
                        strikethrough: None,
                    },
                },
                untracked: Style {
                    color: Some(
                        Cyan,
                    ),
                    bg_color: None,
                    attributes: TextAttributess {
                        bold: None,
                        dimmed: None,
                        italic: None,
                        underline: None,
                        blink: None,
                        reverse: None,
                        hidden: None,
                        strikethrough: None,
                    },
                },
                behind_symbol: Some(
                    '⇡',
                ),
                max_bookmarks: Some(
                    1,
                ),
                max_length: None,
                surround_with_quotes: false,
                ignore_empty_commits: None,
            },
        ),
        Commit(
            Commit {
                previous_message_symbol: '⇣',
                max_length: Some(
                    24,
                ),
                show_previous_if_empty: false,
                empty_text: "\u{f0187}",
                style: Style {
                    color: None,
                    bg_color: None,
                    attributes: TextAttributess {
                        bold: None,
                        dimmed: None,
                        italic: None,
                        underline: None,
                        blink: None,
                        reverse: None,
                        hidden: None,
                        strikethrough: None,
                    },
                },
                surround_with_quotes: false,
                change: Some(
                    Style {
                        color: None,
                        bg_color: None,
                        attributes: TextAttributess {
                            bold: None,
                            dimmed: None,
                            italic: None,
                            underline: None,
                            blink: None,
                            reverse: None,
                            hidden: None,
                            strikethrough: None,
                        },
                    },
                ),
                commit: Some(
                    Style {
                        color: None,
                        bg_color: None,
                        attributes: TextAttributess {
                            bold: None,
                            dimmed: None,
                            italic: None,
                            underline: None,
                            blink: None,
                            reverse: None,
                            hidden: None,
                            strikethrough: None,
                        },
                    },
                ),
                non_unique: Style {
                    color: Some(
                        Black,
                    ),
                    bg_color: None,
                    attributes: TextAttributess {
                        bold: None,
                        dimmed: None,
                        italic: None,
                        underline: None,
                        blink: None,
                        reverse: None,
                        hidden: None,
                        strikethrough: None,
                    },
                },
            },
        ),
        State(
            State {
                separator: " ",
                conflict: Status {
                    disabled: false,
                    text: "(CONFLICT)",
                    style: Style {
                        color: Some(
                            Red,
                        ),
                        bg_color: None,
                        attributes: TextAttributess {
                            bold: None,
                            dimmed: None,
                            italic: None,
                            underline: None,
                            blink: None,
                            reverse: None,
                            hidden: None,
                            strikethrough: None,
                        },
                    },
                },
                divergent: Status {
                    disabled: false,
                    text: "(DIVERGENT)",
                    style: Style {
                        color: Some(
                            Cyan,
                        ),
                        bg_color: None,
                        attributes: TextAttributess {
                            bold: None,
                            dimmed: None,
                            italic: None,
                            underline: None,
                            blink: None,
                            reverse: None,
                            hidden: None,
                            strikethrough: None,
                        },
                    },
                },
                empty: Status {
                    disabled: false,
                    text: "(EMPTY)",
                    style: Style {
                        color: Some(
                            Yellow,
                        ),
                        bg_color: None,
                        attributes: TextAttributess {
                            bold: None,
                            dimmed: None,
                            italic: None,
                            underline: None,
                            blink: None,
                            reverse: None,
                            hidden: None,
                            strikethrough: None,
                        },
                    },
                },
                immutable: Status {
                    disabled: false,
                    text: "(IMMUTABLE)",
                    style: Style {
                        color: Some(
                            Yellow,
                        ),
                        bg_color: None,
                        attributes: TextAttributess {
                            bold: None,
                            dimmed: None,
                            italic: None,
                            underline: None,
                            blink: None,
                            reverse: None,
                            hidden: None,
                            strikethrough: None,
                        },
                    },
                },
                hidden: Status {
                    disabled: false,
                    text: "(HIDDEN)",
                    style: Style {
                        color: Some(
                            Yellow,
                        ),
                        bg_color: None,
                        attributes: TextAttributess {
                            bold: None,
                            dimmed: None,
                            italic: None,
                            underline: None,
                            blink: None,
                            reverse: None,
                            hidden: None,
                            strikethrough: None,
                        },
                    },
                },
            },
        ),
        Metrics(
            Metrics {
                template: "[{changed} {added}{removed}]",
                hide_if_empty: false,
                changed_files: Metric {
                    prefix: "",
                    suffix: "",
                    style: Style {
                        color: Some(
                            Cyan,
                        ),
                        bg_color: None,
                        attributes: TextAttributess {
                            bold: None,
                            dimmed: None,
                            italic: None,
                            underline: None,
                            blink: None,
                            reverse: None,
                            hidden: None,
                            strikethrough: None,
                        },
                    },
                },
                added_lines: Metric {
                    prefix: "+",
                    suffix: "",
                    style: Style {
                        color: Some(
                            Green,
                        ),
                        bg_color: None,
                        attributes: TextAttributess {
                            bold: None,
                            dimmed: None,
                            italic: None,
                            underline: None,
                            blink: None,
                            reverse: None,
                            hidden: None,
                            strikethrough: None,
                        },
                    },
                },
                removed_lines: Metric {
                    prefix: "-",
                    suffix: "",
                    style: Style {
                        color: Some(
                            Red,
                        ),
                        bg_color: None,
                        attributes: TextAttributess {
                            bold: None,
                            dimmed: None,
                            italic: None,
                            underline: None,
                            blink: None,
                            reverse: None,
                            hidden: None,
                            strikethrough: None,
                        },
                    },
                },
                style: Style {
                    color: Some(
                        Magenta,
                    ),
                    bg_color: None,
                    attributes: TextAttributess {
                        bold: None,
                        dimmed: None,
                        italic: None,
                        underline: None,
                        blink: None,
                        reverse: None,
                        hidden: None,
                        strikethrough: None,
                    },
                },
            },
        ),
    ],
}
